fixes across site on snap slider, update location, set mobile menu font sizes on ios

--- a/andrewbe-me/styles/globals.css
+++ b/andrewbe-me/styles/globals.css
@@ -96,6 +96,11 @@ a {
     overflow-x: scroll;
   }
   .snap-slide--item{
+        --peek: 3rem;
+        --gutter: 1.5rem;
+    scroll-snap-align: center;
+    width: calc(100% - var(--peek) * 2);
+    margin: 0 calc(var(--gutter) / 2);
     scroll-snap-align: center;
   }
 
